a
const data: { [key: string]: any } = [];
      ^^^^

SyntaxError: Missing initializer in const declaration
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1274:20)
    at Module._compile (node:internal/modules/cjs/loader:1320:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

// 自动获取同目录下的json文件夹下的json文件
const fileList = autoLoadFile(path.join(__dirname, "./json"), true, [".json"]);

const data: { [key: string]: any } = [];
fileList.forEach((_, i) => {
  for (const [key, val] of Object.entries(_.data)) {
    if (i === 0) {
      // 首次遍历新建对应键名
      data.push({ 键名: key, [_.name]: val });
    } else {
      // 非首次遍历匹配对应键名新增数据
      data.forEach((e) => {
        if (e["键名"] === key) {
          e[_.name] = val;
        }
      });
    }
  }
});


运行报错
